crates/review-buddy/tests/snapshots/detail_position__position_top_160x40.snap
---
source: crates/review-buddy/tests/detail_position.rs
expression: text(& render(& mut app))
---
 review buddy  ·  demo · 4 sources · 7 changes                                                                                                       Liminal HQ
╭ sources ───────────────╮╭ liminal-hq/review-buddy#214 ──────────────────────────────────────────────────────────────────────────────────────────────────── ▲ ╮
│▌ ● All               7 ││ Add a menu bar and keyboard-driven menus                                                                                           │
│    every source        ││ ada wants ada/menus → main                                                                                                         │
│  ● liminal-hq        3 ││ +32 −1 · 3 files · opened 3d ago                                                                                                   │
│    github.com          ││                                                                                                                                    │
│  ● smorris           1 ││ a Approve  x Request changes  c Comment  ⏎ Diff  m Merge                                                                           │
│    github.com          ││                                                                                                                                    │
│  ● platform          2 ││  Overview   Files 3   Checks 6   Conversation 3                                                                                    │
│    gitlab.platform.ex… ││ ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── │
│  ● gitlab.com        1 ││ Adds a menu bar along the top and a Menu type that tracks the selected item.                                                       │
│    gitlab.com          ││                                                                                                                                    │
│                        ││ • Menu::select_next and Menu::select_prev move the highlight                                                                       │
│  Show  s to change     ││ • Menu::activate returns the action for the highlighted item                                                                       │
│  [x] reviewing         ││ • The bar itself is a plain Line, so it picks up the active theme                                                                  │
│  [x] assigned          ││                                                                                                                                    │
│  [x] authored          ││ Reviewers                                                        Checks                                                            │
│  [ ] drafts            ││ ◌ smorris requested                                              ● 2 passing  ◐ 1 running                                          │
│  [ ] noise             │╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
│                        │╭ queue ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                        ││  Waiting on you · 2                                                                                                                │
│                        ││▌ ◐ Add a menu bar and keyboard-driven menus                                                                                     2h │
│                        ││▌ GH review-buddy#214 · ada · review requested                                                                                      │
│                        ││  ● Raise muted text contrast in the light theme                                                                                 5h │
│                        ││  GH review-buddy#209 · jo · approved by you                                                                                        │
│                        ││                                                                                                                                    │
│                        ││  Worth a look · 2                                                                                                                  │
│                        ││  ✕ Cache pipeline status lookups                                                                                                7h │
│                        ││  GL flow!1182 · priya · you're mentioned                                                                                           │
│                        ││  ● Tidy zsh startup                                                                                                             1d │
│                        ││  GH dotfiles#31 · smorris · yours                                                                                                  │
│                        ││                                                                                                                                    │
│                        ││  Can wait · 1                                                                                                                      │
│                        ││  · Clarify the install steps                                                                                                    3d │
│                        ││  GL notes!12 · kai · approved by you                                                                                               │
│                        ││                                                                                                                                    │
│                        ││  ▸ Noise · 2 bot updates · ⏎ to expand                                                                                             │
│                        ││                                                                                                                                    │
╰────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 ⏎ diff  o open  y copy  s show filters  ? help  T theme  q quit
